--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -12,15 +12,19 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Order"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="184dp" />
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="184dp"
+        android:text="@string/new_order"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Orders"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="260dp" />
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/orders"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 </android.support.constraint.ConstraintLayout>
